--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
         "php": ">=5.6",
         "tequila/mongodb-php-lib": "dev-master"
     },
+    "autoload": {
+        "psr-4": { "Tequila\\MongoDB\\ODM\\": "src/" }
+    },
     "license": "MIT",
     "authors": [
         {
