--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
     "type": "library",
     "require": {
         "php": ">=5.6",
-        "tequila/mongodb-php-lib": "dev-master",
-        "symfony/event-dispatcher": "^3.2"
+        "tequila/mongodb-php-lib": "dev-master"
     },
     "autoload": {
         "psr-4": { "Tequila\\MongoDB\\ODM\\": "src/" }
