--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,14 @@
         "php": ">=5.6",
         "tequila/mongodb-php-lib": "dev-master"
     },
+    "require-dev": {
+        "phpunit/phpunit": "5.7.x-dev"
+    },
     "autoload": {
         "psr-4": { "Tequila\\MongoDB\\ODM\\": "src/" }
+    },
+    "autoload-dev": {
+        "psr-4": { "Tequila\\MongoDB\\ODM\\Tests\\": "tests/" }
     },
     "license": "MIT",
     "authors": [
