--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php": ">=5.6",
-        "tequila/mongodb-php-lib": "dev-master"
+        "tequila/mongodb-php-lib": "dev-master",
+        "zendframework/zend-code": "^3.1@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "5.7.x-dev"
