--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "description": "MongoDB ODM for PHP",
     "type": "library",
     "require": {
-        "php": ">=5.6",
-        "tequila/mongodb-php-lib": "dev-master",
-        "zendframework/zend-code": "^3.1@dev"
+        "php": ">=7.1",
+        "zendframework/zend-code": "^3.1@dev",
+        "mongodb/mongodb": "^1.2@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "5.7.x-dev"
